--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,8 @@
 <head>
   <title>BookBuddy</title>
   <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet"/>
+
 
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
@@ -9,13 +11,23 @@
   <script src="/javascripts/angularApp.js"></script>
   <style> .glyphicon-thumbs-up { cursor:pointer } </style>
 </head>
-<body ng-app="flapperNews">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-
-      <ui-view></ui-view>
-
-    </div>
+<body ng-app="bookbuddy">
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">BookBuddy</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+          <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
+          <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div id="main">
+    <ui-view></ui-view>
   </div>
 
   <script type="text/ng-template" id="/home.html">
@@ -60,49 +72,21 @@
       </form>
 </script>
 
-<script type="text/ng-template" id="/posts.html">
-  <div class="page-header">
-    <h3>
-      <a ng-show="post.link" href="{{post.link}}">
-        {{post.title}}
-      </a>
-      <span ng-hide="post.link">
-        {{post.title}}
-      </span>
-    </h3>
-  </div>
-
-  <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
-    <span class="glyphicon glyphicon-thumbs-up"
-      ng-click="incrementUpvotes(comment)"></span>
-    {{comment.upvotes}} - by {{comment.author}}
-    <span style="font-size:20px; margin-left:10px;">
-      {{comment.body}}
-    </span>
-  </div>
-
-  <form ng-submit="addComment()"
-    style="margin-top:30px;">
-    <h3>Add a new comment</h3>
-
-    <div class="form-group">
-      <input type="text"
-      class="form-control"
-      placeholder="Comment"
-      ng-model="body"></input>
-    </div>
-    <button type="submit" class="btn btn-primary">Post</button>
-  </form>
-</script>
-
 <script type="text/ng-template" id="/books.html">
   <div class="page-header">
     <div class="form-group">
       <input type="text"
-      class="form-control"
-      ng-model="query"
-      ng-change="searchBooks(query)"></input>
+        class="form-control"
+        ng-model="query"
+        ng-change="searchBooks(query)">
+      </input>
     </div>
+    <div ng-repeat="book in books">
+      <span ng-click="incrementUpvotes(post)"></span>
+      <img ng-src="{{book.volumeInfo.imageLinks.smallThumbnail}}" alt="Description" />
+      {{book.volumeInfo.title}}
+    </div>
+
   </div>
 </script>
 
